--- a/index.css
+++ b/index.css
@@ -47,7 +47,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: .5em auto;
+  text-align: center;
+  margin: 3em auto;
   padding: 1em 1em;
   background-color: #ffffff;
   border: none;
